--- a/index.html
+++ b/index.html
@@ -43,14 +43,245 @@
                     </li>
                 </ul>
             </div>
+            </div>
 
-
+            <div class="header-content container">
+                <div class="header-txt">
+                    <span>Bienvenido a nuestra tienda</span>
+                    <h1>Ofertas especiales</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, quo aperiam voluptate recusandae
+                         dolorum asperiores cumque libero magnam?
+                         Voluptates sunt, quasi doloribus eligendi 
+                         earum maiores ea inventore? Hic, maiores ea.
+                    </p>
+                    <div class="butons">
+                        <a href="#" class="btn-1">informacion</a>
+                        <a href="#" class="btn-1">leer mas</a>
+                    </div>
+                </div>
+                <div class="header-img">
+                    <img src="Imagenes/frutas.jpeg" alt="">
+                </div>
             </div>
 
         </header>
-        
+        <section class="oferts container">
 
+            <div class="ofert-1 b1">
+                <div class="ofert-txt">
+                    <h3>Lorem impsum sit amet</h3>
+                    <a href="#">leer mas</a>
+                </div>
+                <div class="ofert-img">
+                    <img src="Imagenes/frutas.jpeg" alt="">
+                </div>
+            </div>
+            <div class="ofert-1 b2">
+                <div class="ofert-txt">
+                    <h3>Lorem impsum sit amet</h3>
+                    <a href="#">leer mas</a>
+                </div>
+                <div class="ofert-img">
+                    <img src="Imagenes/verduras.jpeg" alt="">
+                </div>
+            </div>
+            <div class="ofert-1 b3">
+                <div class="ofert-txt">
+                    <h3>Lorem impsum sit amet</h3>
+                    <a href="#">leer mas</a>
+                </div>
+                <div class="ofert-img">
+                    <img src="Imagenes/leche.jpeg" alt="">
+                </div>
+            </div>
+        </section>
+
+        <main class="Products container">
+
+            <h2>Productos</h2>
+
+            <div class="box-container" id="lista-1">
+
+                <div class="box">
+                    <img src="Imagenes/ades.jpeg" alt="">
+                    <div class="product-txt">
+                        <h3>Elisyum</h3>
+                        <p>calidad premium</p>
+                        <p class="precio">$200</p>
+                        <a href="#" class="agregar-carrito btn-3" data-id="1">
+                            Agregar al carrito
+                        </a>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="Imagenes/ades uva.jpeg" alt="">
+                    <div class="product-txt">
+                        <h3>Elisyum</h3>
+                        <p>calidad premium</p>
+                        <p class="precio">$200</p>
+                        <a href="#" class="agregar-carrito btn-3" data-id="2">
+                            Agregar al carrito
+                        </a>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="Imagenes/arandano.jpeg" alt="">
+                    <div class="product-txt">
+                        <h3>Elisyum</h3>
+                        <p>calidad premium</p>
+                        <p class="precio">$200</p>
+                        <a href="#" class="agregar-carrito btn-3" data-id="3">
+                            Agregar al carrito
+                        </a>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="Imagenes/asanitas.jpeg" alt="">
+                    <div class="product-txt">
+                        <h3>Elisyum</h3>
+                        <p>calidad premium</p>
+                        <p class="precio">$200</p>
+                        <a href="#" class="agregar-carrito btn-3" data-id="4">
+                            Agregar al carrito
+                        </a>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="Imagenes/carlosv.jpeg" alt="">
+                    <div class="product-txt">
+                        <h3>Elisyum</h3>
+                        <p>calidad premium</p>
+                        <p class="precio">$200</p>
+                        <a href="#" class="agregar-carrito btn-3" data-id="5">
+                            Agregar al carrito
+                        </a>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="Imagenes/chips.jpeg" alt="">
+                    <div class="product-txt">
+                        <h3>Elisyum</h3>
+                        <p>calidad premium</p>
+                        <p class="precio">$200</p>
+                        <a href="#" class="agregar-carrito btn-3" data-id="6">
+                            Agregar al carrito
+                        </a>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="Imagenes/crunch.jpeg" alt="">
+                    <div class="product-txt">
+                        <h3>Elisyum</h3>
+                        <p>calidad premium</p>
+                        <p class="precio">$200</p>
+                        <a href="#" class="agregar-carrito btn-3" data-id="7">
+                            Agregar al carrito
+                        </a>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="Imagenes/dolores.jpeg" alt="">
+                    <div class="product-txt">
+                        <h3>Elisyum</h3>
+                        <p>calidad premium</p>
+                        <p class="precio">$200</p>
+                        <a href="#" class="agregar-carrito btn-3" data-id="8">
+                            Agregar al carrito
+                        </a>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="Imagenes/fresas.jpeg" alt="">
+                    <div class="product-txt">
+                        <h3>Elisyum</h3>
+                        <p>calidad premium</p>
+                        <p class="precio">$200</p>
+                        <a href="#" class="agregar-carrito btn-3" data-id="9">
+                            Agregar al carrito
+                        </a>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="Imagenes/gamesa.jpeg" alt="">
+                    <div class="product-txt">
+                        <h3>Elisyum</h3>
+                        <p>calidad premium</p>
+                        <p class="precio">$200</p>
+                        <a href="#" class="agregar-carrito btn-3" data-id="10">
+                            Agregar al carrito
+                        </a>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="Imagenes/la costeña.jpeg" alt="">
+                    <div class="product-txt">
+                        <h3>Elisyum</h3>
+                        <p>calidad premium</p>
+                        <p class="precio">$200</p>
+                        <a href="#" class="agregar-carrito btn-3" data-id="11">
+                            Agregar al carrito
+                        </a>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="Imagenes/larin.jpeg" alt="">
+                    <div class="product-txt">
+                        <h3>Elisyum</h3>
+                        <p>calidad premium</p>
+                        <p class="precio">$200</p>
+                        <a href="#" class="agregar-carrito btn-3" data-id="12">
+                            Agregar al carrito
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="btn-2" id="load-more">Cargar Mas</div>
+        </main>
         
+        <section class="testimonial container">
+            <span>Testimoniales</span>
+            <h2>Que opinan nuestros clientes</h2>
+            <div class="testimonial-content">
+                <div class="testimonial-1">
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Itaque, aspernatur accusamus! Optio ipsa dignissimos iste ab minima neque odit nulla, 
+                        hic quibusdam modi iure architecto ratione eaque, ducimus laborum delectus.
+                    </p>
+                    <img src="Imagenes/estrellas.jpeg" alt="">
+                    <h4>Lorem impsum</h4>
+                </div>
+                <div class="testimonial-1">
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Itaque, aspernatur accusamus! Optio ipsa dignissimos iste ab minima neque odit nulla, 
+                        hic quibusdam modi iure architecto ratione eaque, ducimus laborum delectus.
+                    </p>
+                    <img src="Imagenes/estrellas.jpeg" alt="">
+                    <h4>Lorem impsum</h4>
+                </div>
+            </div>
+        </section>
+
+        <footer class="footer">
+            <div class="footer-content container">
+                <div class="link">
+                    <h3>lorem</h3>
+                    <ul>
+                        <li><a href="#">lorem</a></li>
+                        <li><a href="#">lorem</a></li>
+                        <li><a href="#">lorem</a></li>
+                        <li><a href="#">lorem</a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
+
+
+
         <script src="scrip.js"></script>
     </body>
 </html>
