--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                 </thead>
                                 <tbody></tbody>
                             </table>
-                            <a href="#" id="vaciar-carrito">Vaciar Carrito</a>
+                            <a href="#" id="vaciar-carrito" class="btn-3">Vaciar Carrito</a>
                         </div>
                     </li>
                 </ul>
@@ -268,6 +268,33 @@
 
         <footer class="footer">
             <div class="footer-content container">
+                <div class="link">
+                    <h3>lorem</h3>
+                    <ul>
+                        <li><a href="#">lorem</a></li>
+                        <li><a href="#">lorem</a></li>
+                        <li><a href="#">lorem</a></li>
+                        <li><a href="#">lorem</a></li>
+                    </ul>
+                </div>
+                <div class="link">
+                    <h3>lorem</h3>
+                    <ul>
+                        <li><a href="#">lorem</a></li>
+                        <li><a href="#">lorem</a></li>
+                        <li><a href="#">lorem</a></li>
+                        <li><a href="#">lorem</a></li>
+                    </ul>
+                </div>
+                <div class="link">
+                    <h3>lorem</h3>
+                    <ul>
+                        <li><a href="#">lorem</a></li>
+                        <li><a href="#">lorem</a></li>
+                        <li><a href="#">lorem</a></li>
+                        <li><a href="#">lorem</a></li>
+                    </ul>
+                </div>
                 <div class="link">
                     <h3>lorem</h3>
                     <ul>
